--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,1 +1,31 @@
-<!----home page-----
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <title>Home</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="card-panel light-green accent-3">
+            <h1 class="center-align">Friend Finder</h1>
+            <h5 class="center-align">Answer these revealing questions.</h5>
+            <h5 class="center-align">Then find the friend with the greatest compatibility!</h5>
+            
+            <a class="waves-effect pink btn">Go to Survey</a>
+
+
+        </div>
+        <div class="card-panel lime accent-2">
+            <span class="blue-text text-darken-2">
+                <link href="./friends.js">API Friends List</link></span>
+            <span class="blue-text text-darken-2" hfref="https://github.com/AmandaAmos/FriendFinder"> GitHub Repo</span>
+        </div>
+
+
+</body>
+
+</html>
