--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,11 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>Survey</title>
 </head>
+
 <body>
+    <div class="container">
+        <div class="card-panel light-green accent-3">
+            <h1 class="center-align">Survey Questions</h1>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">The Simpson's is a viable source for indepth social commentary.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">Being out in the woods is a relaxing experience.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">Stopping to smell the roses is never a waste of time.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">Live concerts are a highlight of my year.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">I'm always up for eating new foods.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">Traveling to new places and visiting different cultures is a must.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">Jack of all trades and master of none, is better than being master of one.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">Sunshine is essential.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">Coffee makes the world turn.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">Hot or Iced Tea is my go to beverage.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="card-panel brown lighten-4">
+            <div class="input-field col s12">
+                <p class="left-align">Debates are made better with a single malt.</p>
+                <select>
+                    <option value="">Choose your option</option>
+                    <option value="1">Strongly Agree</option>
+                    <option value="2">Agree</option>
+                    <option value="3">Neutral</option>
+                    <option value="4">Disagree</option>
+                    <option value="5">Strongly Disagree</option>
+                </select>
+                <label>Select</label>
+            </div>
+        </div>
+    </div>
+    <hr>
     
+                               
+
 </body>
+
 </html>
