setting up server.js

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -16,6 +16,15 @@
     </div>
     <hr>
     <div class="container">
+        <div class="card-panel purple lighten-4">
+        <h4>About you</h4>
+        <h5>Name (required)</h5>
+        <input type="text" id="name" class="form-control" required="">
+        <h5>Link to Photo Image (required)</h5>
+        <input type="text" id="photo" class="form-control" required="">
+    </div>
+    <hr>
+    <div class="container">
         <div class="card-panel brown lighten-4">
             <div class="input-field col s12">
                 <h5 class="left-align">The Simpson's is a viable source for indepth social commentary.</h5>
@@ -206,7 +215,7 @@
         <div class="card-panel light-green accent-3">
             <button class="btn pink" type="submit" name="action">Submit
                 <i class="material-icons right"></i>
-              </button>
+            </button>
                                
 
 </body>
