--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,7 @@
         </div>
         <div class="card-panel lime accent-2">
             <span class="blue-text text-darken-2">
-                <link href="./friends.js">API Friends List</link></span>
+                <link href="./friends.js">API Friends List</link></span>  ||
             <span class="blue-text text-darken-2" hfref="https://github.com/AmandaAmos/FriendFinder"> GitHub Repo</span>
         </div>
 
