--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Survey</title>
 </head>
 
@@ -214,14 +215,14 @@
         <hr>
         <div class="container">
             <div class="card-panel light-green accent-3">
-                <button class="btn pink" type="submit" name="action" id="userInput">Submit
+                <button class="btn pink" type="submit" id="submit">Submit
                     <i class="material-icons right"></i>
                 </button>
             </div>
         </div>
         <div class="card-panel lime accent-2">
             <span class="blue-text text-darken-2">
-                <p><a href="./friends.js">API Friends List</a> ||
+                <p><a href="./friends">API Friends List</a> ||
                     <a href="https://github.com/AmandaAmos/FriendFinder"> GitHub Repo</a></p>
         </div>
         <footer>
@@ -250,48 +251,50 @@
                 </div>
             </div>
         </div>
+
+
+        <script type="text/javascript">
+            $("#submit").on("click", function() {
+                function validateForm() {
+                    var isValid = true;
+                    $(".form-control").each(function () {
+                        if ($(this).val() === "") isValid = false;
+                    });
+                    $(".chosen-select").each(function () {
+                        if ($(this).val() === "") isValid = false;
+                    });
+                    return isValid;
+                }
+                if (validateForm() === true) {
+                    var userData = {
+                        name: $("#name").val().trim(),
+                        photo: $("#photo").val(),
+                        scores: [
+                            $("one").val().trim(),
+                            $("two").val().trim(),
+                            $("three").val().trim(),
+                            $("four").val().trim(),
+                            $("five").val().trim(),
+                            $("six").val().trim(),
+                            $("seven").val().trim(),
+                            $("eight").val().trim(),
+                            $("nine").val().trim(),
+                            $("ten").val().trim(),
+                        ]
+                    };
+                    var currentURL = window.location.origin;
+                    $.post(currentURL + "/api/friends", userData, function (data) {
+                        $("#matchName").text(data.name);
+                        $("#matchImg").attr("scr", data.photo);
+                        $("#resultsModal").modal("toggle");
+                    })
+
+                } else {
+                    alert("Please complete all fields before submitting!")
+                }
+            });
+        </script>
+
 </body>
 
 </html>
-
-<script type="text/javascript">
-    $("#submit").on("click", function (event) {
-        function validateForm() {
-            var isValid = true;
-            $(".form-control").each(function () {
-                if ($(this).val() === "") isValid = false;
-            });
-            $(".chosen-select").each(function () {
-                if ($(this).val() === "") isValid = false;
-            });
-            return isValid;
-        }
-        if (validateForm() === true) {
-            var userData = {
-                name: $("#name").val().trim(),
-                photo: $("#photo").val(),
-                scores: [
-                    $("one").val().trim(),
-                    $("two").val().trim(),
-                    $("three").val().trim(),
-                    $("four").val().trim(),
-                    $("five").val().trim(),
-                    $("six").val().trim(),
-                    $("seven").val().trim(),
-                    $("eight").val().trim(),
-                    $("nine").val().trim(),
-                    $("ten").val().trim(),
-                ]
-            };
-            var currentURL = window.location.origin;
-            $.post(currentURL + "/api/friends", userData, function (data) {
-                $("#matchName").text(data.name);
-                $("#matchImg").attr("scr", data.photo);
-                $("#resultsModal").modal("toggle");
-            })
-
-        } else {
-            alert("Please complete all fields before submitting!")
-        }
-    });
-</script>
