--- a/app/public/home.html
+++ b/app/public/home.html
@@ -15,13 +15,13 @@
             <h5 class="center-align">Answer these revealing questions.</h5>
             <h5 class="center-align">Then find the friend with the greatest compatibility!</h5>
             
-            <a class="waves-effect pink btn" href="./survey.html">Go to Survey</a>
+            <a class="waves-effect pink btn" href="/survey">Go to Survey</a>
 
 
         </div>
         <div class="card-panel lime accent-2">
             <span class="blue-text text-darken-2">
-              <p><a href="./friends.js">API Friends List</a>  ||
+              <p><a href="/api/friends">API Friends List</a>  ||
               <a href="https://github.com/AmandaAmos/FriendFinder"> GitHub Repo</a></p>
         </div>
 
